# TabletsV2

./: .gitignore  AUDIT_TRAIL_IMPLEMENTATION.md  README.md
backend/: .env.example  .gitignore  CODING_GUIDELINES.md  DATABASE_SETUP.md  create_system_admin.py  main.py  pyproject.toml  pytest.ini  requirements.txt  reset_database.py  seed_data.example.json  test_login.py
backend/core/: COMPANY_ISOLATION_GUIDE.md  authorization.py  base_repository.py  company_context.py  config.py  database.py  dependencies.py  enums.py  exceptions.py  models.py  security.py
backend/database_init/: README.md  operations.py  reset.py  setup.bat  setup.sh
backend/database_init/data/: users.example.json
backend/features/audit/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/features/audit_logs/: dependencies.py  repository.py  routes.py  service.py
backend/features/auth/: auth_routes.py  auth_services.py  dependencies.py  models.py  notifications.py  repository.py  routes.py  schemas.py  services.py  user_routes.py  user_service.py
backend/features/authorization/: PERMISSIONS_GUIDE.md  dependencies.py  permission_checker.py  permissions.py  role_permissions.py  service.py
backend/features/company/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/features/logging/: logger.py  middleware.py
backend/tests/: __init__.py  conftest.py  test_audit_repository.py  test_audit_routes.py  test_audit_service.py  test_auth_service.py  test_authorization_service.py  test_company_context.py  test_company_service.py  test_permission_checker.py  test_product_service.py  test_repositories.py  test_security.py  test_user_service.py
(+99 files in other folders)
