[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabletsv2-backend"
version = "0.1.0"
description = "TabletsV2 ERP Backend"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["core", "features", "features.auth", "features.company", "features.product", "features.authorization", "database_init"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
